# rocq_musings

./: .gitignore  .gitmodules  ByteArray.v  Caracara.v  CaracaraParser.v  ConcreteToSymbolicLemmas.v  Coqlib.v  CrConcreteSemantics.v  CrConcreteSemanticsParser.v  CrConcreteSemanticsTransformer.v  CrDsl.v  CrDslProperties.v  CrIdentifiers.v  CrMem.v  CrMemEx.v  CrMod_TSemantics.v  CrModule.v  CrParser.v  CrProgramState.v  CrScheduler.v  CrSemantics.v  CrSymbolicSemantics.v  CrSymbolicSemanticsTransformer.v  CrTransformer.v  CrVal.v  CrVarLike.v  CtrlPlaneInvariants.v  CtrlPlaneInvariantsSmt.v  EquivalenceChecker.v  Expr.v  Extraction.v  HeaderOrderedType.v  HelperLemmas.v  InitStatus.v  Integers.v  June17_Joe_notes.txt  ListUtils.v  MachineIntegers.v  Main.v  Map.v  (+52 more)
.github/workflows/: validate_build.yaml
extracted-code/: dune
extracted_code/: CrTypeIF.ml  DumpMemEx.ml  EqCheck.ml  Interface.ml  MemEq.ml  MemSolver.ml  RunTests.ml  Shim.ml  TypeInterface.ml  Z3Example.ml  Z3Solver.ml  dune  test.txt
extracted_code/ref/: crcr1.out  crcr2.out
extracted_code/reference/: combine.ml  combine.v  crcr.out  first.ml  first.p4  first.v
sexp/: Person.ml  README.md  combine.ml  dune  example.ml  sorts.ml  test_combine.ml  test_ppx_deriving_sexp.ml
test/: O0.ir  O2.ir  bpf_ref.c  complex1a.out  complex1b.out  mem1a.out  mem1b.out  mem1c.out  mem2a.out  mem2b.out  mem2c.out  mem3.out  mem3a.out  mem3b.out  mem4a.out  mem4b.out  prog1.out  prog2.out  subtract1.out  subtract2.out  table1a.out  table1b.out  table1c.out
test/p4_source/: bpf.out  complex1a.p4  complex1b.p4  subtract1.p4  subtract2.p4  table1a.p4  table1b.p4  table1c.p4
translation/: README.md  combine.v  compile.sh  convert.py  first.out  first.p4  notes.txt  output.v  second.out  second.p4
translation/example/: README.md  bpf.out  eval_compute.smt  eval_compute.txt  eval_compute.v  first.out  first_generated.v  main.v  second.out
translation/example/7.25/: write-up.md
translation/example/7.25/both/: first_generated.v  second.p4  second_generated.v
translation/example/7.25/test-a/: combine.v  compile_out_unsat.txt
translation/example/7.25/test-b/: combine.v  compile_out_sat.txt
translation/example/old/: README.md
translation/sep17/: README.md  combine.ml
