(executable
 (public_name eq_check)
 (name EqCheck)
 (modules EqCheck)
 (libraries extracted_code_lib))

(executable
 (public_name run_tests)
 (name RunTests)
 (modules RunTests)
 (libraries extracted_code_lib))

(library
 (name extracted_code_lib)
 (wrapped false)
 (modules
  Ascii BinInt BinNums BinPos Coqlib CrDsl CrIdentifiers CrProgramState
  CrSymbolicSemanticsTransformer CrTransformer Datatypes EquivDec
  Integers Interface List Maps MyInts Nat Rocqlib SmtTypes SmtExpr SmtQuery
  Specif String Z3Solver Zpower)
 (preprocess (staged_pps ppx_import ppx_sexp_conv))
 (libraries z3 sexplib)
 (flags (:standard -w -33)))
