(executable
 (public_name eq_check)
 (name EqCheck)
 (modules EqCheck)
 (libraries extracted_code_lib))

(executable
  (public_name mem_eq)
  (name MemEq)
  (modules MemEq)
  (libraries extracted_code_lib))

(executable
  (public_name dump_mem_ex)
  (name DumpMemEx)
  (modules DumpMemEx)
  (libraries extracted_code_lib))

(executable
 (public_name run_tests)
 (name RunTests)
 (modules RunTests)
 (libraries extracted_code_lib))

(library
 (name extracted_code_lib)
 (wrapped false)
 (modules
  Ascii BinInt BinNums BinPos Coqlib CrDsl CrIdentifiers CrProgramState CrVarLike
  CrSymbolicSemanticsTransformer CrTransformer CrVal CrMem CrMemEx Datatypes EquivDec
  Integers CrTypeIF Shim List ListDef Maps MyInts Nat PosDef Rocqlib SmtTypes SmtExpr SmtQuery
  Specif String Z3Solver MemSolver Zpower)
 (preprocess (staged_pps ppx_import ppx_sexp_conv))
 (libraries z3 sexplib)
 (flags (:standard -w -33)))
